--- a/frontend/src/components/Download.css
+++ b/frontend/src/components/Download.css
@@ -13,9 +13,9 @@ h1 {
 }
 
 .add-dataset input {
-  padding: 10px;
+  padding: 8px;
   font-size: 16px;
-  width: 200px;
+  width: 50%;
   margin-right: 10px;
   border: 2px solid #008CBA;
   border-radius: 5px;
@@ -38,6 +38,7 @@ h1 {
 
 .dataset-list {
   margin: 20px 0;
+  text-align: left;
 }
 
 .dataset-list button {
