--- a/frontend/src/components/Download.css
+++ b/frontend/src/components/Download.css
@@ -17,7 +17,7 @@ h1 {
   font-size: 16px;
   width: 50%;
   margin-right: 10px;
-  border: 2px solid #008CBA;
+  border: 2px solid #ffd6d6;
   border-radius: 5px;
 }
 
@@ -25,7 +25,7 @@ h1 {
   padding: 10px 20px;
   font-size: 16px;
   border: none;
-  background-color: #008CBA;
+  background-color: #ffd6d6;
   color: white;
   cursor: pointer;
   border-radius: 5px;
@@ -33,7 +33,7 @@ h1 {
 }
 
 .add-dataset button:hover {
-  background-color: #005f8a;
+  background-color:#ffd6d6;
 }
 
 .dataset-list {
@@ -45,16 +45,16 @@ h1 {
   padding: 10px 20px;
   margin: 5px;
   font-size: 16px;
-  border: 2px solid #008CBA;
+  border: 2px solid #ffd6d6;
   background-color: white;
-  color: #008CBA;
+  color: #ffd6d6;
   cursor: pointer;
   border-radius: 5px;
   transition: background-color 0.3s, color 0.3s;
 }
 
 .dataset-list button.selected {
-  background-color: #008CBA;
+  background-color:#ffd6d6;
   color: white;
 }
 
